updated ui of image carousel and sidebar to no longer have the dot indicators appear above the sidebar(using z-index on the components themselves)

--- a/styles/global.css
+++ b/styles/global.css
@@ -67,12 +67,8 @@
   left: 0;
   width: 200px;
   height: 100vh;
-  /* background-color: rgb(149, 47, 47); */
-  /* background-color: #e10600; */
   background-color: #b30600;
   padding: 1rem;
-  z-index: 10;
-  /* border-top: 5px white dotted; */
 }
 
 .sidebar-logo {
